@@ -70,6 +70,7 @@
 
         <!-- TestFX / Monocle -->
         <commonTestFXArgs>
+            --add-modules jdk.incubator.vector
             -Dtestfx.headless=true
             --add-opens=javafx.graphics/com.sun.glass.ui=org.testfx.core
             --add-opens=javafx.graphics/com.sun.javafx.application=org.testfx.core
